# CMakeSandbox

./: CMakeLists.txt  README.md  a.cpp  a2.cpp  abc.cpp  abd.cpp  abe.cpp  b.cpp  main.cpp
CPackInstallers/: CMakeLists.txt  gw.cpp  hw.cpp
HelloWorld/: CMakeLists.txt  extras.cmake  goodbye_text.c  hello.c  hello_text.c
ODR/: CMakeLists.txt  abc.cpp  abd.cpp  abe.cpp  macros.h
OutputDirectories/: CMakeLists.txt  Shape_c.cpp  TestMe.cpp
StaticInitialization_ODR/: CMakeLists.txt  FavouriteNumber.cpp  LeastFavouriteNumber.cpp  Singleton.h  main.cpp
find_packages/: CMakeLists.txt
